[tool.poetry]
name = "rsp-task"
version = "0.1.0"
description = "A GUI task manager based on projects, subtasks, recurrence, and assignment of 1 of 3 categories to each task: research, training, practice"
authors = ["Niko Honu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rsp_task"}]
include = ["rsp_task/main.qml"]

[tool.poetry.dependencies]
python = "<3.12,>=3.11"
pyside6 = "^6.5.2"
appdirs = "^1.4.4"
peewee = "^3.16.3"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.7.4"
python-lsp-black = "^1.3.0"
python-lsp-isort = "^0.1"
pylint = "^2.17.5"
pylsp-mypy = "^0.6.7"
pyflakes = "^3.1.0"
pylsp-rope = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rsp-task = "rsp_task.__main__:main"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pylint]
extension-pkg-allow-list = "PySide6"
