[tool.poetry]
name = "haina-task"
version = "0.1.0"
description = "A simple task manager for my own needs."
authors = ["Niko Honu <nikohonu@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "haina_task"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.11"
appdirs = "^1.4.4"
peewee = "^3.16.3"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.7.4"
python-lsp-black = "^1.3.0"
python-lsp-isort = "^0.1"
pylint = "^2.17.5"
pylsp-mypy = "^0.6.7"
pyflakes = "^3.1.0"
pylsp-rope = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ht = "haina_task.__main__:main"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true
